--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="mb-3">
                 <label for="inp-email" class="form-label">Correo elecrónico</label>
-                <input type="email" class="form-control" id="inp-email">
+                <input type="text" class="form-control" id="inp-email">
             </div>
             <div class="mb-3">
                 <label for="inp-pass" class="form-label">Contraseña</label>
@@ -32,7 +32,8 @@
     </div>
 
 
-    <script src="assets/js/index.js"></script>
+    <script src="assets/js/validadorForm.js"></script>
+
     <!-- Bootstrap JS CDN -->
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
