--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     </div>
 
 
-    <script src="assets/js/validadorForm.js"></script>
+    <!-- <script src="assets/js/validadorForm.js"></script> -->
+     <script type="module" src="assets/js/index.js"></script>
 
     <!-- Bootstrap JS CDN -->
     <script
