--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!-- HTML de ejemplo para probar el validador -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Sebastián Gallegos Frías">
+    <!-- Bootstrap CSS CDN -->
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
         rel="stylesheet"
@@ -14,6 +16,7 @@
 </head>
 <body>
     <div class="container">
+        <!-- Este es un formulario de ejemplo para probar el validador de formularios -->
         <form action="#" id="formulario">
             <div class="mb-3">
                 <label for="inp-nombre" class="form-label">Nombre</label>
@@ -26,6 +29,7 @@
             <div class="mb-3">
                 <label for="inp-pass" class="form-label">Contraseña</label>
                 <input type="password" class="form-control" id="inp-pass">
+                <!-- Aquí se mostrarán los requisitos de la contraseña -->
                 <span id="pass-requisitos">
                     <small id="req-mayus" class="text-danger d-block">Al menos una mayúscula.</small>
                     <small id="req-num" class="text-danger d-block">Al menos un número.</small>
@@ -38,8 +42,8 @@
     </div>
 
 
-    <!-- <script src="assets/js/validadorForm.js"></script> -->
-     <script type="module" src="assets/js/index.js"></script>
+    <!-- Se importa el archivo JS que contiene la lógica del validador -->
+    <script type="module" src="assets/js/index.js"></script>
 
     <!-- Bootstrap JS CDN -->
     <script
